add testng file, listeners and create one class to data providers and add gitignore file 2

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
-# Default ignored files
-/shelf/
-/workspace.xml
-../.idea
+# Ignore IntelliJ IDEA files
+.idea/
+
+# Ignore target directory
+target/
